# simpleFE

./: .gitmodules  README.md
contrib/fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
examples/: CMakeLists.txt
examples/bpsk/: Makefile  bpsk.cxx  rrc_taps.h
firmware/: simpleFE.hex
gr-simplefe/: CMakeLists.txt  MANIFEST.md
gr-simplefe/apps/: CMakeLists.txt
gr-simplefe/cmake/Modules/: FindCppUnit.cmake  GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  simplefeConfig.cmake
gr-simplefe/docs/: CMakeLists.txt  README.simplefe
gr-simplefe/docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
gr-simplefe/docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
gr-simplefe/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-simplefe/grc/: CMakeLists.txt  simplefe_sink_c.xml  simplefe_sink_f.xml  simplefe_source_c.xml  simplefe_source_f.xml  test.grc  top_block.py
gr-simplefe/include/simplefe/: CMakeLists.txt  api.h  sink_c.h  sink_f.h  source_c.h  source_f.h
gr-simplefe/lib/: CMakeLists.txt  qa_simplefe.cc  qa_simplefe.h  ringbuf.h  sfe_device.h  sink_c_impl.cc  sink_c_impl.h  sink_f_impl.cc  sink_f_impl.h  source_c_impl.cc  source_c_impl.h  source_f_impl.cc  source_f_impl.h  test_simplefe.cc
gr-simplefe/python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_sink_c.py  qa_sink_f.py  qa_source_c.py  qa_source_f.py
gr-simplefe/swig/: CMakeLists.txt  simplefe_swig.i
hardware/: Baseband.kicad_pcb  Baseband.pro  Baseband.sch
hardware/HDL/: Makefile  ezusb_if.v  fifo.v  frontend.v  max5863_if.v  spi_if.v  t_ezusb.v  t_frontend.v  t_loopback.v  t_max5863.v  t_spi.v  t_top.v  top.v  top_bitmap.hex
hardware/accessories/filters/: filters-cache.lib  filters.kicad_pcb  filters.sch
libdsp/: CMakeLists.txt  blkconv.cxx  blkconv.h  decimate.cxx  decimate.h  resample.cxx  resample.h  ringbuf.h
libdsp/cmake/: FindNumPy.cmake
libdsp/test/: CMakeLists.txt  pydsp.i  resample.i  setup.py  test_blkconv.cxx  test_decimate.py  test_resample.py
libsimpleFE/: CMakeLists.txt  README.md  chip_select.h  ezusb.c  simpleFE.c  simpleFE.h  usb_access.c  usb_access.h
libsimpleFE/cmake/: FindLibUSB.cmake  FindUdev.cmake  toolchain-cross-mingw32-linux.cmake
libsimpleFE/example/: CMakeLists.txt  external_spi.c  fw_load.c  ice40prog.c  ledblink.c  loopback.c  plotdata.py  setfreq.c  wavegen.c
udev/: 99-udev-simplefe.rules
